Edits to A Life Decoded, post on CS vs. bio

--- a/_drafts/2016-04-09-ALifeDecoded.org
+++ b/_drafts/2016-04-09-ALifeDecoded.org
@@ -3,7 +3,7 @@
 layout: post
 title: Book Review: A Life Decoded
 date: 2016-04-09 12:42
-description: "A quick overview of one of the most exciting stories of modern science"
+description: "A quick overview of one of the most exciting stories of modern science. Venter's story has a lot to teach us about the hardball politics at the upper echelons of Big Science."
 # tags will also be used as html meta keywords.
 tags:
   - synthetic biology
@@ -103,7 +103,9 @@ I also learned much about how scientists get funding for their work. If you're l
 or private backers, you can get a lot of money to do very good work.
 
 The politics of data, money, and authorship are pervasive and rough, but if you play fair
-and surround yourself with good people life can be good.
+and surround yourself with good people life can be good. I mean, few people like politics
+- I certainly don't. But I'd like to know enough about it to protect the people I choose to work with.
+Choosiness has always been a winning strategy for me.
 
 In science, new techniques are better than data, and data better than ideas, and ideas better than force of personal authority.
 
