Further edits to bio vs. CS

--- a/_drafts/2016-04-11-LifeandComputerSciences.org
+++ b/_drafts/2016-04-11-LifeandComputerSciences.org
@@ -19,7 +19,7 @@ noindex: false
 nofollow: false
 ---
 #+END_HTML
-#+OPTIONS: toc:4
+#+: toc:4
 
 Let's talk about a couple of problems with life science that we can see by comparing
 it with the rapidly-innovating field of computer science. The Silicon Valley mantra
