Two posts: four articles, and a summary argument

--- a/_drafts/2016-04-23-SummaryArgument.org
+++ b/_drafts/2016-04-23-SummaryArgument.org
@@ -5,7 +5,7 @@ layout: post
 title: Arguments for and against a doctoral program
 date: 2016-04-23 13:17
 # Should be longer than 150 words, so it will appear as post summary
-description:
+description: In this post, I'm summarising my latest thoughts on whether to get a Ph.D., a topic worth considering in depth!
 # tags will also be used as html meta keywords.
 tags:
   - synthetic biology
@@ -21,7 +21,7 @@ nofollow: false
 #+END_HTML
 #+TOC: headlines 2
 
-### The goal is to do aging research, possibly via synthetic biology.
+*** The goal is to do aging research, possibly via synthetic biology.
 That requires a lab, funding, and education and training.
 
 The options are: 
@@ -29,7 +29,7 @@ The options are:
 - get a Ph.D. and start a biotech company; start a biotech company and use the lab and money to fund research; 
 - start any other sort of company and use the money to fund research.
 
-### Timeline
+*** Timeline
 Any path to researching aging, any working on synthetic biology, must take nearly
 a decade. 
 
@@ -56,7 +56,7 @@ then yes. If not, then possibly not.
 If no investor or employee or co-founder in their right minds would let me near a lab,
 then yes. If I can have more control, then probably not.
 
-### Assorted Arguments
+*** Assorted Arguments
 - Resources arguments: With a Ph.D., I'd have credibility and access to grant money.
 - The "timeline argument": see above. A Ph.D. is not a shortcut.
 - The parade of horribles: a Ph.D. is a horrible experience. You are poor, at the whims
@@ -70,7 +70,7 @@ I feel entitled to disregard the parade of horribles, as I watched it go by befo
 attending law school, and I'm not unmotivated (perhaps most grad students are motivated,
 but some are not).
 
-### Chances of success
+*** Chances of success
 Those arguments are pros and cons. They do not assess chances of success.
 Next, the chances of succeeding in any startup are quite low. However, the chances
 of receiving government funding to get a lab are also quite low, and typically occurs
@@ -89,7 +89,7 @@ Moderately good chances of being a star.
 Startup success depends on high motivation, a market, ability to produce a money-earning
 MVP, and so on. Let us focus on motivation. 
 
-**Motivation**
+*Motivation*
 The timeline plus chances considerations outlined above mean that the only direct paths are roundabout. There is no world where I simply dive into a bunch of papers and figure out aging. 
 Lab, funding, education (leaving out credibility): these are necessary. And the only paths to them are long.
 
@@ -97,7 +97,7 @@ Motivation is a test of my cognitive wherewithal, then.
 Since I am motivated by directly working on the causes I care about, can I keep in mind
 that the (Ph.D./startup) is the most direct route?
 
-### Why direct research, and why in a lab?
+*** Why direct research, and why in a lab?
 Why do direct research? Isn't it more efficient to hire someone else to do it?
 Two reasons. First, without some personal input, I'm not sure someone else will do the
 research I want to done. If you want something done, you have to do it yourself.
@@ -111,10 +111,10 @@ However, assuming that the literature does not hold the complete solution, then 
 and physical research, and the statement that "there's no world where we just dive
 in and solve this" holds true.
 
-### Chances and Timeline
+*** Chances and Timeline
 In summary, chances of receiving lab and funding 
 - Via government/university: low.
-- nVia doctorate + startup: higher.
+- Via doctorate + startup: higher.
 - Via startup: moderate.
 
 Timeline to researching stuff I care about.
@@ -128,7 +128,7 @@ Even if I started planning for Fall 2018 (applying January 2018), with more inte
 coursework, how will we live until then? A biotech startup would seem to be a logical
 preparation for a master's or doctorate. It is a good story to tell.
 
-### What information would make the Ph.D. more necessary?
+*** What information would make the Ph.D. more necessary?
 - Can we get funding or customers without a Ph.D.? Bearing in mind most biotech companies
 are staffed almost entirely by Ph.D.'s.
 - Can my role in the company include science, or will I be pushed out by inevitable internal
@@ -138,7 +138,7 @@ forces?
 If the goal is to promote aging research in the long run, and realistically government-funded Big Science is the best way to accomplish that,
 then a 10-year timeline may result in a local maxima.
 
-### Other impacts
+*** Other impacts
 Government funding has dropped, and if the private sector continues to grow in importance
 for basic research, will continue to drop.
 A company which hires many of the cheap and market-saturated doctorates available
@@ -150,7 +150,7 @@ This can be fixed as a PI, privately or publicly funded.
 Does a private company afford more latitude and speed for scientific research?
 Does it help free up the system to yet more entrepreneurs without formal training?
 
-### Intangible considerations
+*** Intangible considerations
 - The prestige of a Ph.D.
 In addition to the real advantages of credibility - which could make a physical sciences Ph.D. worthwhile, which would be faster than a life sciences Ph.D. - I also would like to be in the club, without having to struggle uphill for years.
 - Grad school
