Tweaking post formats

--- a/_drafts/2016-04-23-SummaryArgument.org
+++ b/_drafts/2016-04-23-SummaryArgument.org
@@ -21,8 +21,8 @@ nofollow: false
 #+END_HTML
 #+TOC: headlines 4
 
-*
-**
+* test
+** second test
 *** The goal is to do aging research, possibly via synthetic biology.
 That requires a lab, funding, and education and training.
 
