--- a/_drafts/2016-04-23-SummaryArgument.org
+++ b/_drafts/2016-04-23-SummaryArgument.org
@@ -1,3 +1,5 @@
+#+STARTUP: showall indent
+#+STARTUP: hidestars
 #+OPTIONS: toc:nil
 #+BEGIN_HTML
 ---
@@ -19,9 +21,9 @@ noindex: false
 nofollow: false
 ---
 #+END_HTML
+#+TOC: headings 4
 #+OPTIONS: toc:4
-* 
-** 
+
 *** The goal is to do aging research, possibly via synthetic biology.
 That requires a lab, funding, and education and training.
 
