Post about human nature

--- a/_drafts/2016-05-06-IronLaw.org
+++ b/_drafts/2016-05-06-IronLaw.org
@@ -71,11 +71,14 @@ repeatedly returning them over the years to fresh flocks of victims, and when fi
 exposed then shuffled money around to avoid victims' legal claims?
 The nuns in Ireland enslaved women who got pregnant, and then destroyed
 the records of the adopted children?
+\\
 No shit.
+\\
 They literally tell their flock it's a sin to challenge them ("you must forgive, my child"), 
 and they have loyal cadres of acolytes to protect them. Of course they acted poorly. 
 It's not because they're religious, it's because they're human.
-
+\\
+\\
 What's that? The Secret Service responded to a political critic by leaking classified
 information about that critic, to his detriment? The Secret Service acted like sophomores
 on spring break in Colombia? The IRS targeted conservative groups under a liberal president?
@@ -84,11 +87,15 @@ making documentaries? Well, we didn't expect people with little to no oversight
 to act competently or use its power fairly.
 
 For the CIA, we turn to Lewis Lapham.
+#+BEGIN_QUOTE
 "The CIA’s failures as an intelligence-gathering operation during the second half of the century billed as America’s own have borne out Doolittle’s early warning of “dead wood at virtually all levels.” The agency evidently didn’t foresee the Soviet explosion of an atomic bomb in 1949, the invasion of South Korea in 1950, the popular uprisings in Eastern Europe in the 1950s, the installation of Soviet missiles in Cuba in 1962, the Vietcong Tet Offensive in 1968, the Arab-Israeli war in 1973, the Soviet invasion of Afghanistan in 1979, the fall of the Berlin Wall in 1989, the collapse of the Soviet Union in 1991, Iraq’s invasion of Kuwait in 1990, the explosion of an atomic bomb by India in 1998, the attacks on New York and Washington in 2001, the absence of weapons of mass destruction in Iraq in 2003."
+#+END_QUOTE
 
 Where would we be without the CIA to gather intelligence for us? Now watch Lapham take on the agency's actual operations:
-"The agency played with sending an émigré army to capture the lost kingdom of Albania, but once parachuted into the Balkan darkness the advance scouts were never seen or heard from again because the CIA’s head of secret ops was unwittingly coordinating the event with a Soviet double agent providing the KGB with the map coordinates of the intended drop zones. To discredit Sukarno as president of Indonesia in the mid-1950s, the CIA planned to incite popular envy and resentment of his sexual prowess, shooting a propaganda film entitled Happy Days showing Sukarno (played by a Mexican actor wearing a mask) in bed with a Soviet agent (played by a California actress wearing a wig). To assassinate Fidel Castro the agency drew up plans to present him with an exploding cigar and poisoned scuba gear. The bungled invasion of the Bay of Pigs in 1961 assumed a crowd of joyful Cuban peasants rising from the sugar cane and marching gloriously to Havana.The cadre of Cuban exiles was landed at the wrong tide on the wrong boats, soon to be confronted by Castro at the head of a column of tanks. In what came to be known as the Iran-Contra affair (running guns to the mullahs in Iran in return for money to fund a thuggish junta in Nicaragua) the “enterprise” deposited $10 million in the wrong Swiss bank account, hired drunken aircraft mechanics in El Salvador, and dropped munitions into the wrong jungles in Nicaragua."
 
+#+BEGIN_QUOTE
+"The agency played with sending an émigré army to capture the lost kingdom of Albania, but once parachuted into the Balkan darkness the advance scouts were never seen or heard from again because the CIA’s head of secret ops was unwittingly coordinating the event with a Soviet double agent providing the KGB with the map coordinates of the intended drop zones. To discredit Sukarno as president of Indonesia in the mid-1950s, the CIA planned to incite popular envy and resentment of his sexual prowess, shooting a propaganda film entitled Happy Days showing Sukarno (played by a Mexican actor wearing a mask) in bed with a Soviet agent (played by a California actress wearing a wig). To assassinate Fidel Castro the agency drew up plans to present him with an exploding cigar and poisoned scuba gear. The bungled invasion of the Bay of Pigs in 1961 assumed a crowd of joyful Cuban peasants rising from the sugar cane and marching gloriously to Havana.The cadre of Cuban exiles was landed at the wrong tide on the wrong boats, soon to be confronted by Castro at the head of a column of tanks. In what came to be known as the Iran-Contra affair (running guns to the mullahs in Iran in return for money to fund a thuggish junta in Nicaragua) the “enterprise” deposited $10 million in the wrong Swiss bank account, hired drunken aircraft mechanics in El Salvador, and dropped munitions into the wrong jungles in Nicaragua."
+#+END_QUOTE
 * 
 Again, this isn't partisan. The Secret Service protects Democrat and Republican presidents equally,
 the IRS works decade in and decade out, the FBI does its thing regardless of the political weather,
