--- a/_posts/2016-05-06-IronLaw.md
+++ b/_posts/2016-05-06-IronLaw.md
@@ -17,22 +17,6 @@ noindex: false
 nofollow: false
 ---
 
-<div id="table-of-contents">
-<h2>Table of Contents</h2>
-<div id="text-table-of-contents">
-<ul>
-<li><a href="#orgheadline4">1. </a>
-<ul>
-<li><a href="#orgheadline1">1.1. Human Nature</a></li>
-<li><a href="#orgheadline2">1.2. The Iron Law</a></li>
-<li><a href="#orgheadline3">1.3. A Touchstone</a></li>
-</ul>
-</li>
-<li><a href="#orgheadline5">2. </a></li>
-</ul>
-</div>
-</div>
-
 # <a id="orgheadline4"></a>
 
 Okay, I'm going to give you what I believe to be an Iron Law of Human Nature.
@@ -43,11 +27,15 @@ it several times. One should take full advantage of these things when they come 
 
 Actually, before I give you my Iron Law, I'll note that formulating laws of human
 nature is a very risky business. History and anthropology teach us that whatever views you and I have about human nature
-are pretty much just always wrong. Think humans were born to be free from social compulsion?
+are pretty much just always wrong. 
+  
+Think humans were born to be free from social compulsion?
 People in Confucian societies, very conformist societies, seem to be doing just fine.
-They're happy. Think humans need structure to achieve anything to flourish, to avoid
+They're happy. 
+Think humans need structure to achieve anything to flourish, to avoid
 societal conflict? Burning man or certain Islanders or Indians, Native American tribes,
 were pretty anarchist, and they were completely fine that way.
+  
 If you're vegan or vegetarian, the Inuit ate basically only meat. If you love meat,
 there are warrior societies that are mostly vegetarian.
 If you love patriarchy, there are a couple of matriarchal societies still kickin'
@@ -68,7 +56,9 @@ incompetence.
 
 ## A Touchstone<a id="orgheadline3"></a>
 
-I like to use this iron law as a touchstone. Suppose I see a news story about how some
+I like to use this iron law as a touchstone. 
+
+Suppose I see a news story about how some
 cops shot someone in their own house and then covered it up or planted a gun, but
 were exposed on the stand in their coordinated lies by a video camera or something.
 Or a news story about how cops routinely rob, under color of law, Americans traveling
