Post about human nature

--- a/_drafts/2016-05-06-IronLaw.org
+++ b/_drafts/2016-05-06-IronLaw.org
@@ -50,7 +50,7 @@ With all that said, this fool will rush in where angels fear to treat.
 ** The Iron Law
 My iron law is: whenever and wherever a group of humans get enough power to prevent
 others from looking too closely at what they're doing, and enough credibility to tell
-others they ought to question them too closely, that group will tend towards corruption and
+others they ought not to question them too closely, that group will tend towards corruption and
 incompetence.
 
 ** A Touchstone
