--- a/_posts/2016-05-06-IronLaw.md
+++ b/_posts/2016-05-06-IronLaw.md
@@ -6,7 +6,7 @@ date: 2016-05-06 14:20
 description: "In which I take the bold and risky step of proposing a non-partisan law about humans"
 # tags will also be used as html meta keywords.
 tags:
-  - synthetic biology
+  - random thoughts
 
 show_meta: true
 comments: true
