EU as frictionless UX

--- a/_drafts/2016-06-27-EUFrictionalessUX.org
+++ b/_drafts/2016-06-27-EUFrictionalessUX.org
@@ -65,6 +65,9 @@ of delegated negotiators from each European member state, and that's what they d
 Quietly, without fanfare, those damn faceless bureacrats sorted it out. As our government
 told them to do.
 
+(Honestly, fanfare would have just disrupted the rather sleepy atmosphere in Brussels.
+All those trumpets.)
+
 Two corporations in two different nation-states think absolutely nothing of merging
 or acquiring each other. If you're a business in the US trying to work with, let
 alone merge with, a business in Brazil, you'd better lawyer up, because now you have
@@ -76,11 +79,12 @@ Two European companies are already in legal sync, have no foreeing policy issues
 to worry about, and have a legal right to do so. You don't even think about it.
 
 The Erasmus programme is a flagship educational initiative, but far more common
-are the year abroad and the work abroad schemes. In the United States, universiites
+are the year abroad and the work experience schemes. In the United States, universiites
 also form special relationships with foreign universities so their students can
 travel. But the university also has to set up visas; if a foreign student visits
 the United States, they often have to pass a background check. In the EU, the student
-just hops on a plane. There's no issue.
+just hops on a plane to study, or if she finds a foreign placement for her work
+epxerience requirement. There's no issue.
 
 At the same time the EU tears down barriers to individuals pursuing opportunities
 wherever in Europe they may be found, the EU also tries to protect local customs.
@@ -92,8 +96,13 @@ of quality control.
 
 Cornish pasties (they look like empañadas) come from Cornwall, England. Cheddar cheese 
 comes from Cheddar, England. Champagne comes from Champagne, France. Scotch whiskey
-comes from Scotland. You don't have to look closely at your "cheese products." 
-It's just real cheddar, from Cheddar.
+comes from Scotland. Prosciutto di parma is from Parma, Italy. Jamòn iberico is from
+the Iberian Peninsula, in Spain and portugal.
+
+Not to bash on the United States, but when I moved here, I bought "cheddar cheese"
+several times, and after tasting it I wasn't sure if it was cheese, let alone cheddar.
+In the EU, you don't have to look closely at your "cheese products." It's just real 
+cheddar, from Cheddar.
 
 Last, science. Modern science is inherently global and international. Deep learning
 as we know was developed largely in Canada. CRISPR was invented by Emmanuelle
