--- a/_drafts/2016-06-27-WannabeEU.org
+++ b/_drafts/2016-06-27-WannabeEU.org
@@ -22,14 +22,7 @@ nofollow: false
 If there's one single issue which is the defining aspect of American conservatism,
 one core principle which sits in conservatives' very bones, which they breathe in
 and breathe out, it might be /limited government/, which you can recast without
-too much trouble into /the federal government has too much damn power and got it through treachery/.
-
-Conservatives get accused of using states' rights as a dog whistle for racism,
-and sometimes that's true, but in my view it's almost always the other way around. Conservatives
-have to tap dance their way out Jim Crow and slavery because a strong federal
-government ended those things, and strong states would have enabled them, but they
-still really like strong states and wish we had a weaker federal government.
-
+too much trouble into /the federal government has too much damn power (and got it through underhanded means)/.
 
 
 
