The EU is what the US was meant to be

--- a/_drafts/2016-06-27-WannabeEU.org
+++ b/_drafts/2016-06-27-WannabeEU.org
@@ -65,11 +65,14 @@ First, they built themselves bottom-up, piece by piece, over a long time.
 I can hear the British Euroskeptics snorting now: "What do you mean it was built
 bottom up? Unelected bureaucrats sitting on their fat arses in Brussels passing
 down abstruse commandments from on high, is more like!"
+
 Be that as it may, every power the European Council has gained has beeen granted
 it by the member states. The United States binds itself in this way too, through
 international treaties. By accepting one treaty at a time, which are then part of
 the laws of the United States, we've also built up international law piece by
-piece. It's a slow, modular process.
+piece. It's a slow, modular process, and it allows the EU member states to consider
+carefully what should be added to the core government, and what should be left to
+the individual governments.
 
 Contrast this, again, with the relatively one-shot deal of the American Constitution.
 Ratified by the states, and boom, all the core powers of the federal government
