--- a/_drafts/2016-04-18-MondayLinks.org
+++ b/_drafts/2016-04-18-MondayLinks.org
@@ -41,7 +41,7 @@ editorial and review standards, won't fix the problem.
 The ultimate solution is to open data, materials, and workflow.
 
 ** Synthetic biology and open data
-Suppose you're just starting your scientific career (as I am). You might not have to worry about the academic job market.
+Suppose you're just starting your scientific career, and let's leave aside job worries.
 What's the best way to advance the field? 
 
 These articles suggest two things. First, more and more I get the impression that a working knowledge of statistics /far/ 
