voting our egos post

--- a/_drafts/2016-08-07-VotingOurEgos.org
+++ b/_drafts/2016-08-07-VotingOurEgos.org
@@ -37,6 +37,7 @@ small-party elected representative does no good at all - there is no advantage
 to having a representative in Parliament/Congress with a purer version of your
 politics.
 
+** Third Parties in America
 This argument reminded me of an old question: what prevents third parties from
 succeeding in America? Pure political tradition, voter inertia? Given how pissed
 off most of America seems to be, I feel there must be a more structural reason.
@@ -76,6 +77,7 @@ Looking at these structural reasons, and playing out the game theory, convinced
 me that Shirky is essentially right. In the United States, third parties do not
 and cannot have any lasting effect.
 
+** Multi-party Systems
 That still leaves me with Shirky's dig at multi-party systems. Is a two-party
 system, which leaves many voters with no elected representative remotely close
 to their beliefs, morally superior to a proportionally representative,
@@ -96,6 +98,7 @@ United States, candidates must veer to the extremes to win the primaries, and
 then dance their way back to the middle. The multi-party system seems to have a
 more lasting, and hence real, effect.
 
+** The dirty work of democratic compromise
 Here's one other passing argument that caught my eye. Shirky also argues that
 not voting, or voting third party, shoves the dirty work of democracy on
 everyone else. Not everyone can get the candidate they want, and thus everyone
@@ -119,5 +122,6 @@ representative would give you less rather than more democracy, Shirky's essay
 changed my mind about third parties. No one is listening to our protest votes -
 ours, my friends, is a lone voice crying in the wilderness. Nevertheless, in our
 two-party system, there's no way to join in the work of deciding unless I vote
-in the primaries or move to a swing state. And that's why, come Election Day,
-I'll vote my ego.
+in the primaries or move to a swing state. 
+
+And that's why, come Election Day, I'll vote my ego.
