--- a/_posts/2016-08-13-ANewVC.md
+++ b/_posts/2016-08-13-ANewVC.md
@@ -3,7 +3,7 @@ layout: post
 title: A New Way to Do Business
 date: 2016-08-13 15:25
 # Should be longer than 20 words, so it will appear as post summary
-description: Vinay Gupta has a lot of ideas, including a couple about how to venture capital right
+description: Vinay Gupta has a lot of ideas, including a couple about how to do venture capital right
 # tags will also be used as html meta keywords.
 tags:
   - startups
