relativizing the singularity

--- a/_drafts/2016-08-14-RelativizingtheSingularity.org
+++ b/_drafts/2016-08-14-RelativizingtheSingularity.org
@@ -48,7 +48,7 @@ secrets of the universe.
 
 By that time, Kuhn and Popper and others had enough historical data to begin to
 think about the process of scientific revolutions. These worldview-shattering,
-humanity-shattering scientific discoveries were to be somewhat... expected.
+humanity-altering scientific discoveries were to be somewhat... expected.
 
 The scientific community in general became more adept at thinking about
 uncertainty in their theories. The vocabulary of /models/ took over, a key change,
