--- a/_posts/2016-08-18-core.spec.md
+++ b/_posts/2016-08-18-core.spec.md
@@ -48,7 +48,7 @@ addressing one bug after another, and you cannot change your program freely
 without introducing more bugs. It's tense and constricting.
 
 It's best to view dynamic and typed languages on a continuum. What gets checked
-where? Even in a dynamic language, (\* 3 "myname") will throw an error, and even
+where? Even in a dynamic language, `(* 3 "myname")` will throw an error, and even
 in a typed language you can get away with some stuff.
 
 ## Staying Light and Loose<a id="orgheadline2"></a>
@@ -79,50 +79,50 @@ The code I quote below is from the Lambda Island video.
 
 Basically, Spec has "regexes" for data, which allows us to describe the shape of our data.
 
-\`(s/valid? (s/cat :num number? :key keyword?) [5 :x])\` will return true.
+`(s/valid? (s/cat :num number? :key keyword?) [5 :x])` will return true.
 
-\`s/cat\` gives you an ordered sequence of expected values, so you can tell Spec
+`s/cat` gives you an ordered sequence of expected values, so you can tell Spec
 that you want a name followed by a telephone number. 
 
 If you use a namespaced keyword in your spec, Spec will use
 them as keywords, and will also use them as specs in their own right to validate
 the corresponding value.
 
-For instance, in \`(s/def ::recipe (s/keys :req [::ingredients] :opt
-[::steps]))\`, Spec will go look up \`::ingredients\`, a spec you've previously
+For instance, in `(s/def ::recipe (s/keys :req [::ingredients] :opt
+[::steps]))`, Spec will go look up `::ingredients`, a spec you've previously
 defined, and run a check on that as well.
 
 This technique is vital to Spec's goal of allowing you to dynamically compose
-and build up maps. What data should go in \`::ingredients\`? You won't tell Spec
-in the \`::recipe\` spec. That would limit you as you combine different recipe
-maps. Instead, tell Spec in the \`::ingredients\` map. Now you can provide specs
+and build up maps. What data should go in `::ingredients`? You won't tell Spec
+in the `::recipe` spec. That would limit you as you combine different recipe
+maps. Instead, tell Spec in the `::ingredients` map. Now you can provide specs
 for different maps, and also freely combine them.
 
 Further, your ::ingredients map spec will get checked first, before ::recipe's
 spec, and you will fail fast.
 
-(Interestingly, if you want \`s/cat\` adds a further operation. It checks that it
+(Interestingly, if you want `s/cat` adds a further operation. It checks that it
 gets all the data, but it returns the data slotted in with the keywords you
-specified. By using \`s/conform\` with \`s/cat\`, you've transformed your data.
+specified. By using `s/conform` with `s/cat`, you've transformed your data.
 
 To build more sophisticated data descriptions, like "my user needs to provide
-either a phone number or an email," \`s/alt\` lets you pick one or the other. No
+either a phone number or an email," `s/alt` lets you pick one or the other. No
 more defining tests as you write your Reactive code!
 
 Be aware that our data regexes won't reach inside collections by default. We can
-use something like \`(s/cat :nums (s/coll-of number? []))\` to reach inside.  Or you
+use something like `(s/cat :nums (s/coll-of number? []))` to reach inside.  Or you
 can nest your s/spec calls to look at each nested collection, which is in
-particular the right way to use your regex spec: \`(s/cat :nums (s/spec (s/+
-number?)))\`.
+particular the right way to use your regex spec: `(s/cat :nums (s/spec (s/+
+number?)))`.
 
 You can fully specify a function by providing three specs: one for its
 arguments, one for its return value, and one for the operation of the function.
 You can put all three of these in s/fdef, and you can call s/instrument on your
 function to get a wrapped version of your function testing the arguments spec.
 
-After you're done all that, as much as you would like, \`s/gen\` will generate
-tests for you. \`s/explain\` generates an error message, and formats it in a
-string with \`s/explain-str\` or as data with \`s/explain-data\`.
+After you're done all that, as much as you would like, `s/gen` will generate
+tests for you. `s/explain` generates an error message, and formats it in a
+string with `s/explain-str` or as data with `s/explain-data`.
 
 # Flexible and Powerful<a id="orgheadline5"></a>
 
